# OCI-Runtime

./: Cargo.toml  README.md  ROADMAP.md
.github/scripts/: native-linux-smoke.sh
.github/workflows/: ci.yml
conformance/: oci-1.3.0-normative-coverage.json  oci-1.3.0-normative-evidence.json  oci-1.3.0-schema-coverage.json
crates/agent/: Cargo.toml
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: client.rs  lib.rs  model.rs  server.rs  tests.rs  transport.rs  validation.rs  wire.rs
crates/agent/src/: lib.rs  main.rs  vsock.rs
crates/agent/src/executor/: control.rs  init.rs  mod.rs  mount.rs  mount_tests.rs  pid.rs  plan.rs  plan_tests.rs  process.rs  rootfs.rs  state.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: capability.rs  lib.rs  lifecycle.rs
crates/krun/: Cargo.toml  RUNTIME-PROVENANCE.md  build.rs
crates/krun/src/: agent_smoke.rs  context.rs  ffi.rs  lib.rs  macos_context.rs  macos_vm_smoke.rs  main.rs  report.rs
crates/krun/tests/: cli.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_pipe.rs  agent_session.rs  agent_smoke.rs  agent_smoke_process.rs  driver.rs  lib.rs  native_linux_driver.rs  native_smoke.rs  oci_smoke.rs  report.rs  service.rs  windows_security.rs
crates/runtime/src/agent_session/: tests.rs
crates/runtime/src/native_smoke/: linux.rs
crates/runtime/src/native_smoke/linux/: filesystem.rs  lifecycle.rs
crates/runtime/src/oci_smoke/: windows.rs
crates/runtime/src/oci_smoke/windows/: lifecycle.rs
crates/runtime/src/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
crates/runtime/src/service/: tests.rs
crates/runtime/src/state/: create.rs  delete.rs  failure.rs  filesystem.rs  kill.rs  mod.rs  model.rs  observe.rs  oci_state.rs  operation.rs  start.rs  tests.rs  windows_security.rs
crates/sdk/: Cargo.toml
crates/sdk/examples/: generate_normative_coverage.rs  generate_schema_coverage.rs
crates/sdk/src/: bundle.rs  client.rs  conformance.rs  error.rs  id.rs  lib.rs  model.rs  schema.rs  service.rs  validation.rs
crates/sdk/src/semantic/: common.rs  linux.rs  mod.rs  rules.rs  tests.rs  vm.rs
crates/sdk/src/transport/: client.rs  local.rs  mod.rs  server.rs  tests.rs  wire.rs
crates/sdk/tests/: client_contract.rs
docs/: agent-protocol.md  durable-state.md  guest-agent.md  linux-native.md  macos-hvf.md  normative-coverage.md  oci-conformance.md  sdk-transport.md  semantic-validation.md  windows-whpx.md
fixtures/native-linux/: config.json
