[workspace]
members = [
    "crates/core",
    "crates/sdk",
    "crates/krun",
    "crates/runtime",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["A3S Lab Team"]
license = "MIT"
repository = "https://github.com/A3S-Lab/OCI-Runtime"

[workspace.dependencies]
a3s-libkrun-sys = "=3.1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
jsonschema = { version = "0.48.5", default-features = false }
oci-spec = { version = "0.10", default-features = false, features = ["runtime"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "rt", "sync"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
