[package]
name = "a3s-oci-agent-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned host-to-guest protocol for A3S OCI Runtime"

[dependencies]
a3s-oci-sdk = { path = "../sdk" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
