[package]
name = "a3s-oci-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux guest agent for A3S OCI Runtime"

[[bin]]
name = "a3s-oci-agent"
path = "src/main.rs"

[dependencies]
a3s-oci-agent-protocol = { path = "../agent-protocol" }
a3s-oci-sdk = { path = "../sdk" }
zeroize.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["process", "time"] }

[lints]
workspace = true
