[package]
name = "a3s-oci-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line frontend for A3S OCI Runtime"

[[bin]]
name = "a3s-oci"
path = "src/main.rs"

[dependencies]
a3s-oci-runtime = { path = "../runtime" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
a3s-oci-core = { path = "../core" }

[lints]
workspace = true
