[package]
name = "a3s-oci-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Async, strongly typed Rust SDK for A3S OCI Runtime"

[dependencies]
a3s-oci-core = { path = "../core" }
async-trait.workspace = true
jsonschema.workspace = true
oci-spec.workspace = true
semver.workspace = true
serde.workspace = true
serde_ignored.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
